--- a/src/app/modules/tienda-auth/course-leason/course-leason.component.html
+++ b/src/app/modules/tienda-auth/course-leason/course-leason.component.html
@@ -183,6 +183,20 @@
                                   *ngFor="let clase of section.clases"
                                 >
                                   <li>
+                                    <!-- [checked]="i === 0" -->
+                                    <div class="form-check">
+                                      <input
+                                        type="checkbox"
+                                        (click)="checkedClass(clase)"
+                                        class="form-check-input"
+                                        [id]="'exampleCheck' + clase._id"
+                                      />
+                                      <label
+                                        class="form-check-label"
+                                        [attr.for]="'exampleCheck' + clase._id"
+                                        >Check</label
+                                      >
+                                    </div>
                                     <a
                                       href="#"
                                       onclick="return false;"
