--- a/src/app/modules/tienda-auth/course-leason/course-leason.component.html
+++ b/src/app/modules/tienda-auth/course-leason/course-leason.component.html
@@ -187,6 +187,11 @@
                                     <div class="form-check">
                                       <input
                                         type="checkbox"
+                                        [checked]="
+                                          course_student.clases_checked.includes(
+                                            clase._id
+                                          )
+                                        "
                                         (click)="checkedClass(clase)"
                                         class="form-check-input"
                                         [id]="'exampleCheck' + clase._id"
