[Feat] Agregar a la vista el numero de reseñas, rating y numero de estudiantes

--- a/src/app/modules/tienda-auth/course-leason/course-leason.component.html
+++ b/src/app/modules/tienda-auth/course-leason/course-leason.component.html
@@ -344,15 +344,15 @@
                         <ul class="rbt-meta mb--20 mt--10">
                           <li>
                             <i class="fa fa-star color-warning"></i
-                            >{{ course.n_reviews }}
+                            >{{ course.user.num_reviews }}
                             Reviews
                             <span class="rbt-badge-5 ml--5"
-                              >{{ course.avg_rating }} Rating</span
+                              >{{ course.user.avg_rating }} Rating</span
                             >
                           </li>
                           <li>
                             <i class="feather-users"></i
-                            >{{ course.n_students }} Students
+                            >{{ course.user.num_students }} Students
                           </li>
                           <li>
                             <a href="#"
